# HP-iLO-5-Health-Check-Report

./: .gitignore  HP-iLO5-HealthReport.ps1  README.md  pyproject.toml
examples/: generate_sample.py  sample-health-report.docx
src/ilo_health_report/: __init__.py  cli.py  collector.py  redfish.py  report.py
tests/: Smoke.Tests.ps1  test_collector.py  test_redfish.py  test_report.py
