[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "hp-ilo-5-health-check-report"
version = "0.1.0"
description = "Generate a Microsoft Word health report for an HPE iLO 5 server using Redfish."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "python-docx>=1.1.2,<2",
  "requests>=2.32.3,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<10"]

[project.scripts]
ilo-health-report = "ilo_health_report.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

